feat(auth): 增加权限验证
